# satox-sdk

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.rocksdb  Doxyfile  LICENSE  README.md  TESTING_BRANCH_CI_CD_SUMMARY.md  docker-compose.yml  go.mod  pytest.ini  requirements-dev.txt  requirements.txt  satox-sdk.tag  setup.py  test_backup  test_backup.db
benchmarks/: CMakeLists.txt  README.md  sdk_benchmarks.cpp
bindings/: CMakeLists.txt
bindings/csharp/: CMakeLists.txt  README.md  REFACTORING.md  SatoxSDK.cs  satox-sdk.csproj
bindings/csharp/Satox/: Types.cs
bindings/csharp/Satox.Core/: BlockchainManager.cs  SatoxManager.cs  TransactionManager.cs
bindings/csharp/Satox.Tests/: LanguageBindingsTest.cs  PostQuantumAlgorithmsTests.cs  SatoxSDKTests.cs
bindings/csharp/docs/: API.md  README.md  api.md  examples.md  stub.md
bindings/csharp/examples/: BasicUsage.cs
bindings/csharp/satox_bindings/: APIManager.cs  AssetExplorer.cs  AssetManager.cs  AssetValidator.cs  BlockchainManager.cs  Class1.cs  CoreManager.cs  DatabaseManager.cs  IPFSManager.cs  NFTExplorer.cs  NFTManager.cs  NFTValidator.cs  QuantumManager.cs  SecurityManager.cs  ThreadSafeManager.cs  TransactionManager.cs  WalletManager.cs
bindings/csharp/src/: SDKConfig.cs  SatoxSDK.cs  satox_pinvoke.cpp
bindings/csharp/tests/: CoreTests.cs  IntegrationTests.cs  QuantumTests.cs  SatoxSDKTests.cs
bindings/go/: CMakeLists.txt  README.md  developer_notes.md  go.mod  go.sum  satox_sdk.go
bindings/go/docs/: API.md
bindings/go/examples/: basic_usage.go
bindings/go/satox/: asset.go  blockchain.go  core_test.go  ipfs.go  network.go  nft.go  quantum.go  satox.go  security.go  simple_test.go  transaction.go  types.go
bindings/go/satox_bindings/: api_manager.go  asset_manager.go  blockchain_manager.go  core_manager.go  database_manager.go  ipfs_manager.go  network_manager.go  nft_manager.go  security_manager.go  transaction_manager.go  wallet_manager.go
bindings/go/tests/: blockchain_manager_test.go
bindings/java/: CMakeLists.txt  README.md  SatoxManager.java  pom.xml
bindings/java/docs/: API.md  README.md
bindings/java/examples/: BasicUsage.java
bindings/java/satox_bindings/: APIManager.java  AssetManager.java  BlockchainManager.java  DatabaseManager.java  IPFSManager.java  NFTManager.java  NetworkManager.java  QuantumManager.java  SatoxManager.java  SecurityManager.java  TransactionManager.java  Types.java  WalletManager.java
bindings/javascript/: .babelrc  CMakeLists.txt  README.md  binding.gyp  eslint.config.js  package-lock.json  package.json
bindings/javascript/satox_bindings/: api_manager.js  asset_manager.js  core_manager.js  database_manager.js  ipfs_manager.js  network_manager.js  nft_manager.js  security_manager.js  transaction_manager.js  wallet_manager.js
bindings/javascript/src/: binding.cpp  core.js  index.js  index.ts  satox.js  transaction.js  types.js
bindings/javascript/tests/: .babelrc  core.test.js  jest.config.js  language_bindings_test.js  package-lock.json  package.json  satox.test.js  setup.js
bindings/lua/: CMakeLists.txt  documentation.lua  satox_sdk.c  satox_sdk.lua
bindings/lua/docs/: API.md  api_clients.md  graphql_client.md
bindings/lua/examples/: basic_usage.lua
bindings/lua/satox/: asset_manager.lua  blockchain_manager.lua  core_manager.lua  database_manager.lua  init.lua  ipfs_manager.lua  network_manager.lua  nft_manager.lua  security_manager.lua  wallet_manager.lua
bindings/lua/satox_bindings/: api_manager.lua  asset.lua  (+11 more)
bindings/python/: CMakeLists.txt  README.md  __init__.py  developer_notes.md  satox_sdk_python.cpp  setup.py  setup_comprehensive.py  setup_simple.py  test_comprehensive_bindings.py  test_python_binding.py  test_python_bindings.py
bindings/rust/: CMakeLists.txt  Cargo.toml  README.md  build.rs
bindings/typescript/: CMakeLists.txt  README.md  binding.gyp  eslint.config.js  package-lock.json  package.json  test-simple.js  tsconfig.json
bindings/wasm/: CMakeLists.txt  README.md  satox_sdk.js  satox_sdk.wasm
satox-api/: CMakeLists.txt
satox-api/src/: api_manager.cpp  graphql_api.cpp  rest_api.cpp
satox-api/tests/: api_components_comprehensive_test.cpp  api_components_test.cpp  test_api.cpp
satox-assets/: CMakeLists.txt
satox-assets/cmake/: satox-assets-config.cmake.in
satox-assets/src/: asset_manager.cpp
satox-assets/tests/: CMakeLists.txt  asset_manager_comprehensive_test.cpp  asset_manager_test.cpp  test_assets.cpp
satox-quantum/: CMakeLists.txt
satox-quantum/docs/: implementation_differences.md  post_quantum_algorithms.md  quantum_resistant_features.md
satox-quantum/src/: hybrid_encryption.cpp  key_storage.cpp  post_quantum_algorithms.cpp  quantum_manager.cpp
satox-quantum/tests/: CMakeLists.txt  post_quantum_algorithms_test.cpp  quantum_manager_test.cpp  quantum_tests.cpp  test_quantum.cpp
satox-transactions/: CMakeLists.txt
satox-transactions/cmake/: satox-transactions-config.cmake.in
satox-transactions/src/: transaction_broadcaster.cpp  transaction_fee_calculator.cpp  transaction_manager.cpp  transaction_signer.cpp  transaction_validator.cpp
satox-transactions/tests/: CMakeLists.txt  test_transactions.cpp  transaction_broadcaster_test.cpp  transaction_fee_calculator_test.cpp  transaction_manager_comprehensive_test.cpp  transaction_manager_test.cpp  transaction_signer_test.cpp  transaction_validator_test.cpp
src/: CMakeLists.txt  key_manager.cpp  main.cpp  satox_sdk.cpp  satox_sdk_c.cpp
src/app/: page.tsx
src/asset/: CMakeLists.txt  README.md
src/blockchain/: CMakeLists.old.txt  CMakeLists.txt  README.md
src/core/: CMakeLists.txt  README.md
src/database/: CMakeLists.txt  README.md
src/ipfs/: CMakeLists.txt  README.md
src/network/: CMakeLists.txt  README.md
src/nft/: CMakeLists.txt  README.md
src/rpc_proxy/: CMakeLists.txt  README.md  rpc_proxy_manager.cpp  utils.cpp
src/security/: CMakeLists.txt  README.md  security_manager.cpp
src/wallet/: CMakeLists.txt  README.md
tests/rpc_proxy/: CMakeLists.txt  rpc_proxy_manager_test.cpp
(+4648 files in other folders)
