[package]
name = "satox-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust bindings for the Satox SDK"
license = "MIT"
authors = ["Satoxcoin Core Developer"]
repository = "https://github.com/satoverse/satox-sdk"

[lib]
name = "satox_sdk"
crate-type = ["cdylib", "rlib"]

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.37", features = ["full"] }

[build-dependencies]
cc = "1.0"
cmake = "0.1"

[features]
default = []
blockchain = []
network = []
security = []
asset = []
nft = []
ipfs = [] 
